<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:padding="8dp"
    android:gravity="start">

    <!-- Profile Picture -->
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/commentProfileImage"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:src="@drawable/ic_default_profile"
        android:scaleType="centerCrop"
        app:shapeAppearanceOverlay="@style/CircleImage"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/profile_image" />

    <!-- Comment Bubble -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/comment_bubble_background"
        android:padding="12dp">

        <ImageView
            android:id="@+id/moreOptionsButton"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="end"
            android:src="@drawable/ic_more_vert"
            android:contentDescription="@string/more_options"
            android:visibility="gone"
            android:padding="4dp" />

        <TextView
            android:id="@+id/commentAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/assistant_bold"
            android:text="Username"
            android:textColor="#444"
            android:textSize="13sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/commentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/assistant_semi_bold"
            android:text="This is a comment"
            android:textColor="#000"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/commentImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:visibility="gone"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/comment_image" />


        <TextView
            android:id="@+id/commentTimestamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/assistant_regular"
            android:text="5 min ago"
            android:textColor="#888"
            android:textSize="12sp" />
    </LinearLayout>
</LinearLayout>
